# zigbee2mqtt-operator

./: .clippy.toml  .env  .gitignore  .yamlfmt  Cargo.toml  Dockerfile  flake.nix  rustfmt.toml
.github/: renovate.json5
.github/workflows/: chart.yaml  checks.yaml  image.yaml  release.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  serviceaccount.yaml
extension/: main.ts  package-lock.json  package.json  tsconfig.json
src/: crds.rs  device.rs  error.rs  event_manager.rs  ext.rs  instance.rs  lib.rs  main.rs  status_manager.rs  sync_utils.rs  with_source.rs
src/commands/: crdgen.rs  mod.rs  run.rs
src/mqtt/: exposes-examples.yaml  exposes.rs  handlers.rs  manager.rs  mod.rs  mqtt.rs  subscription.rs
src/mqtt/handlers/: device.rs  group.rs  lib.rs  misc.rs  mod.rs
src/reconcilers/: device.rs  group.rs  instance.rs  mod.rs
