[package]
name = "zigbee2mqtt-operator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
async-trait = "0.1.73"
bitflags = { version = "2.4.1", features = ["serde"] }
derive_builder = "0.12.0"
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
futures = "0.3.28"
garde = "0.16.1"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.86.0", features = ["runtime", "client", "derive"] }
once_cell = "1.18.0"
rand = "0.8.5"
rumqttc = "0.22.0"
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
structout = "0.6.0"
strum_macros = "0.25.2"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.37"
veil = "0.1.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
