[package]
name = "zigbee2mqtt-operator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "=0.1.13"
async-trait = "=0.1.89"
bitflags = { version = "=2.10.0", features = ["serde"] }
derive_builder = "=0.20.2"
enum_dispatch = "=0.3.13"
env_logger = "=0.11.8"
futures = "=0.3.31"
garde = { version = "=0.22.1", features = ["derive"] }
k8s-openapi = { version = "=0.26.1", features = ["latest"] }
kube = { version = "=2.0.1", features = ["runtime", "client", "derive"] }
rand = "=0.9.2"
rumqttc = "=0.25.1"
rustls-native-certs = "=0.8.2"
rustls-pemfile = "=2.2.0"
schemars = { version = "=1.1.0", features = ["chrono04"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
serde_yaml = "=0.9.34"
structout = "=0.6.0"
strum_macros = "=0.27.2"
thiserror = "=2.0.17"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "=0.1.17", features = ["sync"] }
tracing = "=0.1.44"
veil = "=0.2.0"

[dev-dependencies]
pretty_assertions = "=1.4.1"
